# footCollisionModel

./: README.md  animateLinkMotion.m  linkPlaneCollisionEvent.m  singleCompliantLinkTest.m  singleCompliantLink_planar.m
module/: CMakeLists.txt
module/app/: CMakeLists.txt
module/app/scripts/: CompliantAnkleExperiment.xml  CompliantAnkleExperiment.xml.template  default.ini
module/include/: CompliantAnkleModule.h
module/src/: CompliantAnkleModule.cpp  main.cpp
onelinkmodel/: animateLinkMotion.m  singleCompliantLinkTest.m
postprocessing/: analyzeData.m  readStateExt.m
twolinkmodel/: animateLinkMotion.m  main.m  main_multiTest.m  main_multiTest_state.m  main_optimal_timeSeries.m  main_optimization.m  optimalImpedance.m  optimality.m  plotAndDebug.m  plotMultiTestResult.m  plotMultiTestResult_state.m  prepareGazebo.m  twolink_dynamic.m
twolinkmodel/data/: incl_10_k10_d3.mat  incl_10_k15_d3.mat  incl_10_k20_d3.mat  incl_10_k30_d3.mat  incl_10_k5_d3.mat  incl_10_k8_d3.mat  incl_5_k10_d3.mat  incl_5_k15_d3.mat  incl_5_k20_d3.mat  incl_5_k30_d3.mat  incl_5_k5_d3.mat  incl_5_k8_d3.mat  incl_7_k10_d3.mat  incl_7_k15_d3.mat  incl_7_k20_d3.mat  incl_7_k30_d3.mat  incl_7_k5_d3.mat  incl_7_k8_d3.mat  incl_m10_k10_d3.mat  incl_m10_k15_d3.mat  incl_m10_k20_d3.mat  incl_m10_k30_d3.mat  incl_m10_k40_d3.mat  incl_m10_k5_d3.mat  incl_m10_k80_d3.mat  incl_m10_k8_d3.mat  incl_m5_k10_d3.mat  incl_m5_k15_d3.mat  incl_m5_k20_d3.mat  incl_m5_k30_d3.mat  incl_m5_k40_d3.mat  incl_m5_k5_d3.mat  incl_m5_k80_d3.mat  incl_m5_k8_d3.mat  incl_m7_5_k10_d3.mat  incl_m7_5_k15_d3.mat  (+4 more)
(+7 files in other folders)
